# Hello

./: CMakeLists.txt
01/: hello.cpp  hello_world.cpp
Fall_semester/Class vector/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
Fall_semester/Class_vector/: main.cpp  vector.cpp  vector.h
Fall_semester/ch14/logic_elements/: CMakeLists.txt  logic.cpp  logic.h  main.cpp
Fall_semester/ch15/: 1.cpp
Fall_semester/graphics_classes/Arc/: CMakeLists.txt  main.cpp  main2.cpp
Fall_semester/graphics_classes/ch14/: CMakeLists.txt  main.cpp
Fall_semester/graphics_classes/chessboard/: Makefile  board.cpp  board.h  cell.cpp  cell.h  checkers.cpp  checkers.h  main.cpp
Fall_semester/graphics_classes/chessboard2/: CMakeLists.txt  ReadMe.txt  board.cpp  board.h  cell.cpp  cell.h  main.cpp
Fall_semester/graphics_classes/koch/: CMakeLists.txt  main.cpp
Fall_semester/graphics_classes/koch_snowflake/: CMakeLists.txt  main.cpp
Fall_semester/graphics_classes/my/: CMakeLists.txt  main.cpp
Fall_semester/graphics_classes/shape_primitives/: CMakeLists.txt
Fall_semester/least_square_metod/least_squares/: empty.txt  least_squares.cpp
Fall_semester/least_square_metod/least_squares_graph/: least_squares.cpp  (+2 more)
LogicElements/: logic_shapes.cpp  main.cpp
Sprint semestr/: 01.cpp  03.cpp  05.cpp  myfile.txt
Summer_Time/Arc/: CMakeLists.txt  chapter12.cpp  chapter13.cpp  chapter13_hw.cpp  chapter14_hw.cpp  chapter_15.cpp  chapter_15_6.cpp  chapter_16.cpp  chapter_16_hw.cpp  japanese-aqe-data.txt
lib/Graph_lib/: GUI.cpp  Graph.cpp  Graph.h  GraphBox.h  Point.h  Simple_window.h
